# coding-platform

./: README.md  initial_ai.md
.github/workflows/: code_quality.yml  run_tests.yml
poc_judge0/: Readme.md  code.py  main.py  tests.py  tests.txt
python_master/: manage.py  pyproject.toml  pytest.ini
python_master/core/: admin.py  models.py  urls.py  utils.py  views.py
python_master/core/migrations/: 0001_initial.py  0002_alter_task_hints.py  0003_educationpath.py  0004_task_education_paths.py
python_master/core/templates/core/: education_path_list.html  index.html
python_master/core/tests/: test_educational_path_page.py  test_models.py  test_path_model.py  test_task_model.py  test_utils.py  test_views.py
python_master/core_theme/: apps.py
python_master/core_theme/static_src/: package-lock.json  package.json
python_master/python_master/: asgi.py  settings.py  urls.py  wsgi.py
python_master/users/: admin.py  models.py
python_master/users/migrations/: 0001_initial.py
python_master/users/tests/: test_user_login.py
