[tool.poetry]
name = "python-master"
version = "0.1.0"
description = ""
authors = ["Jacek Ostański <jacek@ivolution.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
